--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #186779;
     color: #fff;
     margin: 0;
+    margin-bottom: 3rem;
     padding: 40px 0;
   }
 
@@ -16,8 +17,13 @@ body {
     font-size: 3.2rem;
   }
 
+  #currentDay {
+    font-weight: bold;
+    font-size: 2rem;
+  }
+
   .time-container {
-    margin: 0rem 12rem;
+    margin: 0rem 25rem;
   }
   
   textarea {
@@ -46,6 +52,8 @@ body {
     background-color: #76b3c5;
     color: #000000;
     border: none;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
   }
   
   .past {
@@ -78,4 +86,11 @@ body {
   .saveBtn i:hover {
     font-size: 20px;
     transition: all 0.3s ease-in-out;
+  }
+
+  footer {
+    background-color: #186779;
+    margin: 0;
+    margin-top: 3rem;
+    padding: 5rem;
   }
