--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,7 @@ body {
     color: #fff;
     margin: 0;
     margin-bottom: 3rem;
-    padding: 40px 0;
+    padding: 30px 0;
   }
 
   h1 {
@@ -19,7 +19,7 @@ body {
 
   #currentDay {
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 2.3rem;
   }
 
   .time-container {
@@ -50,25 +50,23 @@ body {
   
   .hour {
     background-color: #76b3c5;
-    color: #000000;
+    color: #fff;
     border: none;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
+    font-weight: bold;
   }
   
   .past {
     background-color: #d3d3d3;
-    color: white;
   }
   
   .present {
     background-color: #ff6961;
-    color: white;
   }
   
   .future {
     background-color: #77dd77;
-    color: white;
   }
   
   .saveBtn {
@@ -93,4 +91,13 @@ body {
     margin: 0;
     margin-top: 3rem;
     padding: 5rem;
+  }
+
+  footer p {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    font-size: 2rem;
+    color: #fff;
   }
